styles/AboutSection.module.scss
@import './Variables.scss';

.aboutSection {
  max-width: 1010px;
  margin: auto;
  padding-top: 50px;

  h2 {
    margin-top: 0;
  }
}

.aboutNavigator {
  display: flex;
  justify-content: space-between;

  li {
    width: 100%;
    padding-top: 1.4rem;
    padding-bottom: 1.4rem;
    font-size: 1.2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    color: $lighter-blue;
    border-bottom: 1px solid $darker-blue;
    cursor: pointer;
  }

  .selected {
    color: white;
    border-bottom: 1px solid white;
  }
}

.carouselWrapper {
  overflow: hidden;
}

.carousel {
  width: 400%;
  display: flex;
  position: relative;

  section {
    width: 100%;
  }
}

@media (max-width: 350px) {
  .aboutNavigator {
    width: calc(100% + 30px);
    margin-left: -15px;
  }
}

